objects/Product2.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__ApprovedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ApprovedOn__c</fullName>
        <label>Approved On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AttributeDefaultValues__c</fullName>
        <label>Attribute Default Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AttributeMetadata__c</fullName>
        <label>Attribute Metadata</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AttributeRules__c</fullName>
        <label>Attribute Rules</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Availability__c</fullName>
        <label>Availability</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__CarrierId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carrier</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Carrier</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ChangeDetectorImplementation__c</fullName>
        <description>Name of an implementation (e.g. an Apex class) which will be used by Change Detector functionality in Vlocity Order Management.</description>
        <inlineHelpText>Name of implementation which will be used by Change Detector in XOM</inlineHelpText>
        <label>ChangeDetectorImplementation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClassId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For product spec and commercial offer types of records, identifies the class of this product spec or offer.</description>
        <label>Class</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products (Class)</relationshipLabel>
        <relationshipName>ClassProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CoverageCalculationFormula__c</fullName>
        <label>Coverage Calculation Formula</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DRBundleName__c</fullName>
        <label>Data Raptor Bundle Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveDate__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EligibilityCriteriaComments__c</fullName>
        <label>Eligibility Criteria Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EligibilityCriteria__c</fullName>
        <label>Eligibility Criteria</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EndOfLifeDate__c</fullName>
        <description>This datetime sets product life to end after which it is not expected to support/order/maintain.</description>
        <label>End of Life Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EnrollmentStatus__c</fullName>
        <label>Enrollment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__FormularyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Formulary</label>
        <referenceTo>vlocity_ins__Formulary__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FulfilmentStartDate__c</fullName>
        <description>This datetime determines when the product can be fulfilled in orders, opportunities or quotes.</description>
        <label>Fulfilment Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <description>The globally unique identifier of this Product. Used to identify the Product across Salesforce instances and potentially within other systems. Vlocity uses a UUID as described in http://en.wikipedia.org/wiki/Universally_unique_identifier, but when migrated from other initiating systems, any globally unique product identifier can be used.</description>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__HasCustomAttributesProcess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates if a custom process is used to add or edit product attributes, for example: OmniScript can be used as a custom process. If this field is false, out of box basic form is use to add or edit the product attributes.</description>
        <label>Custom Attributes Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__HeaderData__c</fullName>
        <description>Stores the headers for Matrix is stored as a JSON.</description>
        <inlineHelpText>Stores the headers for Matrix is stored as a JSON.</inlineHelpText>
        <label>Header Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__HelpText__c</fullName>
        <label>Help Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ImageId__c</fullName>
        <description>This field store the Salesforce SLDS Icon name associated with this product. The supported format is icon_category:icon_name. For example, standard:canvas.</description>
        <label>Image &amp; Icon</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InstanceKeyFormula__c</fullName>
        <label>Instance Key Formula</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsConfigurable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Configurable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsLocationDependent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Location Dependent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsNotAssetizable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Assetizable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsOrderable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if the product is one that can be ordered directly. (It does not mean that this product could not be acquired as a component of another product.)</description>
        <label>Orderable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsRecommended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recommended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__JSONAttribute__c</fullName>
        <description>JSON body containing a denormalized representation of the product&apos;s Vlocity Attribute values and configuration metadata.</description>
        <label>JSONAttribute</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LastPublishDate__c</fullName>
        <description>The last date time the child spec was published.</description>
        <label>Last Publish Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LastSimulationInput__c</fullName>
        <label>Last Simulation Input</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LineOfBusiness__c</fullName>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Group Benefits</fullName>
                </value>
                <value>
                    <fullName>Group Life</fullName>
                </value>
                <value>
                    <fullName>Group AD&amp;D</fullName>
                </value>
                <value>
                    <fullName>Individual Health</fullName>
                </value>
                <value>
                    <fullName>Individual Life</fullName>
                </value>
                <value>
                    <fullName>Individual Annuities</fullName>
                </value>
                <value>
                    <fullName>Property &amp; Casualty</fullName>
                </value>
                <value>
                    <fullName>Customizable</fullName>
                </value>
                <value>
                    <fullName>Group Dental</fullName>
                </value>
                <value>
                    <fullName>Group Vision</fullName>
                </value>
                <value>
                    <fullName>Group Health</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__MarketSegment__c</fullName>
        <label>Market Segment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO (Admin Services Only)</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Large Group</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>Mid Sized Group</fullName>
                </value>
                <value>
                    <fullName>Small Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ObjectTypeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Object Type</label>
        <referenceTo>vlocity_ins__ObjectClass__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ParentClassId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Class</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Subclasses</relationshipLabel>
        <relationshipName>Subclasses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PricingFormula__c</fullName>
        <label>Pricing Formula</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PricingSource__c</fullName>
        <label>Pricing Source Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductSpecId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For commercial offers, this identifies the product specification on which this offer is based.</description>
        <label>Product Spec</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Offers</relationshipLabel>
        <relationshipName>ProductSpecOffers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductTemplateId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Template</label>
        <referenceTo>vlocity_ins__ProductTemplate__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductTemplateProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Template</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products Based on Template</relationshipLabel>
        <relationshipName>ProductTemplateProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProviderNetworkId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Network</label>
        <referenceTo>vlocity_ins__ProviderNetwork__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RateBandId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate Band</label>
        <referenceTo>vlocity_ins__RateBand__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RatingCalcProcedureName__c</fullName>
        <label>Rating Procedure Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RatingProcedureType__c</fullName>
        <label>Rating Procedure Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Calculation Procedure</fullName>
                </value>
                <value>
                    <fullName>Integration Procedure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__RecordTypeName__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ReplacementProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Replacement Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products Replaced</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ReserveProcessingMode__c</fullName>
        <description>Reserve processing mode for Claim Coverage.</description>
        <label>Reserve Processing Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CoverageReserve</fullName>
                    <default>true</default>
                    <label>Coverage Reserve Mode</label>
                </value>
                <value>
                    <fullName>ReserveWorksheet</fullName>
                    <label>Reserve Worksheet Mode</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Scope__c</fullName>
        <label>Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Order Item</fullName>
                    <default>true</default>
                    <label>Order Item</label>
                </value>
                <value>
                    <fullName>Downstream Order Item</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__SellingEndDate__c</fullName>
        <description>This datetime determines when the product can stop selling.</description>
        <label>Selling End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SellingStartDate__c</fullName>
        <description>This datetime determines when the product can start selling.</description>
        <label>Selling Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SpecificationType__c</fullName>
        <description>Identifies offers versus product specs, resource specs, service specs, etc.</description>
        <label>Specification Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Resource</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Offer</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
                <value>
                    <fullName>Grant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__StandardPremium__c</fullName>
        <label>Standard Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__SubType__c</fullName>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>vlocity_ins__Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>PPO</fullName>
                </value>
                <value>
                    <fullName>HMO</fullName>
                </value>
                <value>
                    <fullName>EPO</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>HDHP</fullName>
                </value>
                <value>
                    <fullName>Indemnity</fullName>
                </value>
                <value>
                    <fullName>FSA</fullName>
                </value>
                <value>
                    <fullName>HSA</fullName>
                </value>
                <value>
                    <fullName>HRA</fullName>
                </value>
                <value>
                    <fullName>PCA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Term__c</fullName>
        <label>Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>vlocity_ins__Term</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Tier__c</fullName>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
                <value>
                    <fullName>Catastrophic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__TimeToLive__c</fullName>
        <label>Time To Live</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalCoverageCalculationFormula__c</fullName>
        <label>Total Coverage Calculation Formula</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalInsuredFormula__c</fullName>
        <description>Face Amount of the policy product or a formula when there&apos;s multiple coverages and multiple terms/limits with coverage.</description>
        <label>Total Insured Formula</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TrackAsAgreement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if product needs to be tracked as part of agreement</description>
        <label>Track As Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>Medical Savings Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>vlocity_ins__MarketSegment__c</columns>
        <columns>vlocity_ins__Type__c</columns>
        <columns>PRODUCT2.RECORD_TYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <listViews>
        <fullName>All_Products_Medical_Large_Group_Cust</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>vlocity_ins__MarketSegment__c</columns>
        <columns>vlocity_ins__Type__c</columns>
        <columns>PRODUCT2.RECORD_TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.vlocity_ins__Product</value>
        </filters>
        <filters>
            <field>vlocity_ins__MarketSegment__c</field>
            <operation>includes</operation>
            <value>Large Group</value>
        </filters>
        <filters>
            <field>vlocity_ins__Type__c</field>
            <operation>equals</operation>
            <value>Medical</value>
        </filters>
        <label>All Products Medical (Large Group/Cust.)</label>
    </listViews>
    <listViews>
        <fullName>Individual</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>vlocity_ins__MarketSegment__c</field>
            <operation>equals</operation>
            <value>Individual</value>
        </filters>
        <label>Individual</label>
    </listViews>
    <listViews>
        <fullName>Small_Group_Dental</fullName>
        <booleanFilter>((1 AND 2 AND 3) OR (1 AND 2 AND 4))</booleanFilter>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>vlocity_ins__MarketSegment__c</field>
            <operation>equals</operation>
            <value>Small Group</value>
        </filters>
        <filters>
            <field>vlocity_ins__Type__c</field>
            <operation>equals</operation>
            <value>Dental</value>
        </filters>
        <filters>
            <field>vlocity_ins__SubType__c</field>
            <operation>equals</operation>
            <value>HMO</value>
        </filters>
        <filters>
            <field>vlocity_ins__SubType__c</field>
            <operation>equals</operation>
            <value>PPO</value>
        </filters>
        <label>Small Group (Dental)</label>
    </listViews>
    <listViews>
        <fullName>Small_Group_Medical</fullName>
        <booleanFilter>((1 AND 2 AND 3) OR (1 AND 2 AND 4))</booleanFilter>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>vlocity_ins__MarketSegment__c</field>
            <operation>equals</operation>
            <value>Small Group</value>
        </filters>
        <filters>
            <field>vlocity_ins__Type__c</field>
            <operation>equals</operation>
            <value>Medical</value>
        </filters>
        <filters>
            <field>vlocity_ins__SubType__c</field>
            <operation>equals</operation>
            <value>HMO</value>
        </filters>
        <filters>
            <field>vlocity_ins__SubType__c</field>
            <operation>equals</operation>
            <value>PPO</value>
        </filters>
        <label>Small Group (Medical)</label>
    </listViews>
    <listViews>
        <fullName>Small_Group_Vision</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>vlocity_ins__MarketSegment__c</field>
            <operation>equals</operation>
            <value>Small Group</value>
        </filters>
        <filters>
            <field>vlocity_ins__Type__c</field>
            <operation>equals</operation>
            <value>Vision</value>
        </filters>
        <label>Small Group (Vision)</label>
    </listViews>
    <recordTypes>
        <fullName>vlocity_ins__ClaimInjurySpec</fullName>
        <active>true</active>
        <label>Claim Injury Spec</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__ClaimProduct</fullName>
        <active>true</active>
        <label>Claim Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__ClaimPropertySpec</fullName>
        <active>true</active>
        <label>Claim Property Spec</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__Class</fullName>
        <active>true</active>
        <label>Class</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__CoverageSpec</fullName>
        <active>true</active>
        <label>Coverage Spec</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__InsuredItemSpec</fullName>
        <active>true</active>
        <label>Insured Item Spec</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__InsuredPartySpec</fullName>
        <active>true</active>
        <label>Insured Party Spec</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__Product</fullName>
        <active>true</active>
        <label>Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__ProductTemplate</fullName>
        <active>true</active>
        <label>Product Template</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__RatingFactSpec</fullName>
        <active>true</active>
        <label>Rating Fact Spec</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__TermSpec</fullName>
        <active>true</active>
        <label>Term Spec</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>